--- a/index.html
+++ b/index.html
@@ -6,7 +6,15 @@
     <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/ng-grid/2.0.11/ng-grid.min.css">
     <link rel="stylesheet" type="text/css" href="style.css">
   </head>
+
+
+
+
+
+
   <body ng-controller="mainCtrl">
+
+    <!--NAV BAR-->
     <div class="navbar navbar-default navbar-fixed-top" role="navigation">
       <div class="container">
         <div id="myContainer">
@@ -22,10 +30,18 @@
         </div>
       </div>
     </div>
+
+
+    <!--DATA FROM SEARCH SHOWS HERE-->
     <div class="panel panel-default">
       <div class="panel-heading"> Your Search Results:</div>
      <div class="gridStyle" ng-grid="gridOptions" swap-image="defaultInfo.search"></div>
     </div>
+
+
+
+
+    <!--THIS IS WHERE THE LINKS TO SCRIPTS BEGINS-->
     <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
     <script src="http://cdnjs.cloudflare.com/ajax/libs/angular.js/1.2.20/angular.min.js"></script>
     <script src="http://cdnjs.cloudflare.com/ajax/libs/ng-grid/2.0.11/ng-grid.min.js"></script>
